[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tollbooth-dpyc"
version = "0.1.7"
description = "Don't Pester Your Customer — Bitcoin Lightning micropayments for MCP servers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Lonnie VanZandt" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/lonniev/tollbooth-dpyc"
Repository = "https://github.com/lonniev/tollbooth-dpyc"
Issues = "https://github.com/lonniev/tollbooth-dpyc/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tollbooth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
